# Block-Bard

./: .gitignore  Cargo.toml  DESIGN.md  README.md  TESTING.md  requirements.txt  summary.md
agent/: mining_agent.py  preferences.py  schema_utils.py  story_config.py  storyteller.py  styles.py
blockbard/: Cargo.toml
blockchain/: block.py  blockchain.py
network/: tracker.py
schemas/: bible.json  cassius_economic.txt  catholic_prompt.txt  claudia_cultural.txt  debate.json  example_system_prompt.txt  minimal.json  novel.json  orthodox_prompt.txt  poetry.json  protestant_prompt.txt  template.json  template_system_prompt.txt  titus_military.txt
scripts/: run_node.py  run_peer.py  run_server.py  run_tracker.py  run_web_dev.sh  test_agent.py
src/: lib.rs  main.rs
src/blockchain/: block.rs  blockchain.rs  mod.rs  tests.rs
src/crypto/: hash.rs  mod.rs
src/network/: mod.rs  peer.rs  protocol.rs
src/storage/: chain_storage.rs  mod.rs
src/utils/: mining.rs  mod.rs
tests/: test_blockchain.py  test_fork_resolution.py  test_network.py
web/react-app/: package-lock.json  package.json
web/react-app/src/: App.tsx
web/react-app/src/components/: BlockCard.tsx
web/react-app/src/services/: api.ts
web/react-app/src/views/: LinearView.tsx  TreeView.tsx
web/static/: index.html
