[package]
name = "blockbard"
version = "0.1.0"
edition = "2021"

[lib]
name = "blockbard"
path = "src/lib.rs"

[[bin]]
name = "blockbard"
path = "src/main.rs"

[dependencies]
sha2 = "0.10.6"         # For SHA-256 hashing
chrono = { version = "0.4.24", features = ["serde"] }  # For timestamps with serde support
serde = { version = "1.0.159", features = ["derive"] }  # For serialization
serde_json = "1.0.95"   # For JSON serialization
hex = "0.4.3"           # For hex encoding
tokio = { version = "1.28.0", features = ["full"] }  # Async runtime
reqwest = "0.11.16"     # HTTP client
axum = "0.6.15"         # HTTP server framework
rand = "0.8.5"          # For random number generation
tracing = "0.1.37"      # For logging
tracing-subscriber = "0.3.17"  # For logging
thiserror = "1.0.40"    # For error handling 